[gd_scene load_steps=7 format=2]

[ext_resource path="res://Font/Roboto-Bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://Font/Roboto-Regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/Mine.png" type="Texture" id=3]
[ext_resource path="res://Sprites/solid_snake_holding_an_rpg_by_transparentjiggly64_dd18vap-fullview.png" type="Texture" id=4]
[ext_resource path="res://Sprites/fe47068f32f31717b74b8530a31f946b.png" type="Texture" id=5]
[ext_resource path="res://UI.gd" type="Script" id=6]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 576.0
script = ExtResource( 6 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 144.0
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="EndTurnButton" type="Button" parent="."]
visible = false
margin_left = 1046.0
margin_top = 34.0
margin_right = 1246.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 1 )
text = "End Turn"

[node name="TurnText" type="Label" parent="."]
margin_left = 878.0
margin_top = 56.0
margin_right = 1021.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 2 )
text = "Turn 257"

[node name="BuildingButtons" type="HBoxContainer" parent="."]
margin_left = 34.0
margin_top = 34.0
margin_right = 270.0
margin_bottom = 109.0
alignment = 1

[node name="MineButton" type="Button" parent="BuildingButtons"]
margin_left = 6.0
margin_right = 69.0
margin_bottom = 75.0
icon = ExtResource( 3 )

[node name="GreenhouseButton" type="Button" parent="BuildingButtons"]
margin_left = 73.0
margin_right = 149.0
margin_bottom = 75.0
icon = ExtResource( 4 )

[node name="SolarPanelButton" type="Button" parent="BuildingButtons"]
margin_left = 153.0
margin_right = 229.0
margin_bottom = 75.0
icon = ExtResource( 5 )

[node name="HeaderFoodMetal" type="Label" parent="."]
visible = false
margin_left = 368.0
margin_top = 32.0
margin_right = 483.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 2 )
text = "Food:
Metal:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodMetalText" type="Label" parent="."]
visible = false
margin_left = 496.0
margin_top = 32.0
margin_right = 611.0
margin_bottom = 107.0
custom_colors/font_color = Color( 1, 0.678431, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "25 (+80)
25 (+80)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderOxygenEnergy" type="Label" parent="."]
visible = false
margin_left = 616.0
margin_top = 32.0
margin_right = 728.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 2 )
text = "Oxygen:
Energy:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OxygenEnergyText" type="Label" parent="."]
visible = false
margin_left = 736.0
margin_top = 32.0
margin_right = 851.0
margin_bottom = 107.0
custom_colors/font_color = Color( 1, 0.678431, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "25 (+80)
25 (+80)"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
[connection signal="pressed" from="BuildingButtons/MineButton" to="." method="_on_MineButton_pressed"]
[connection signal="pressed" from="BuildingButtons/GreenhouseButton" to="." method="_on_GreenhouseButton_pressed"]
[connection signal="pressed" from="BuildingButtons/SolarPanelButton" to="." method="_on_SolarPanelButton_pressed"]
